--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,6 +15,8 @@
     "jsx": "react-jsx",
 
     /* Linting */
+    // "noImplicitAny": true,
+    // "strictNullChecks": true,
     "strict": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
